--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./css/modern-normalize.css" />
-    <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="./css/main.min.css" />
+    <!-- <link rel="stylesheet" href="./css/styles.css" /> -->
     <title>WebStudio</title>
   </head>
 
@@ -21,10 +22,16 @@
       <!-- navigation -->
       <div class="container flex">
         <nav class="nav-section flex">
-          <a class="nav-logo" href="./"><span class="logo-color">Web</span>Studio</a>
+          <a class="nav-logo" href="./"
+            ><span class="logo-color">Web</span>Studio</a
+          >
           <ul class="main-nav list flex">
-            <li class="item"><a class="nav-link current" href="#">Студия</a></li>
-            <li class="item"><a class="nav-link" href="./portfolio.html">Портфолио</a></li>
+            <li class="item">
+              <a class="nav-link current" href="#">Студия</a>
+            </li>
+            <li class="item">
+              <a class="nav-link" href="./portfolio.html">Портфолио</a>
+            </li>
             <li class="item"><a class="nav-link" href="#">Контакты</a></li>
           </ul>
         </nav>
@@ -54,7 +61,9 @@
       <section class="hero-section section">
         <div class="container">
           <h1 class="hero-heading">Эффективные решения для вашего бизнеса</h1>
-          <button class="hero-btn" type="button" data-modal-open>Заказать услугу</button>
+          <button class="hero-btn" type="button" data-modal-open>
+            Заказать услугу
+          </button>
         </div>
       </section>
       <!-- our advantages -->
@@ -70,7 +79,8 @@
               </div>
               <h3 class="advantages-heading">Внимание к деталям</h3>
               <p class="advantages-text">
-                Идейные соображения, а также начало повседневной работы по формированию позиции.
+                Идейные соображения, а также начало повседневной работы по
+                формированию позиции.
               </p>
             </li>
             <li class="item">
@@ -81,7 +91,8 @@
               </div>
               <h3 class="advantages-heading">Пунктуальность</h3>
               <p class="advantages-text">
-                Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
+                Задача организации, в особенности же рамки и место обучения
+                кадров влечет за собой.
               </p>
             </li>
             <li class="item">
@@ -92,7 +103,8 @@
               </div>
               <h3 class="advantages-heading">Планирование</h3>
               <p class="advantages-text">
-                Равным образом консультация с широким активом в значительной степени обуславливает.
+                Равным образом консультация с широким активом в значительной
+                степени обуславливает.
               </p>
             </li>
             <li class="item">
@@ -103,7 +115,8 @@
               </div>
               <h3 class="advantages-heading">Современные технологии</h3>
               <p class="advantages-text">
-                Значимость этих проблем настолько очевидна, что реализация плановых заданий.
+                Значимость этих проблем настолько очевидна, что реализация
+                плановых заданий.
               </p>
             </li>
           </ul>
@@ -115,16 +128,37 @@
           <h2 class="section-heading">Чем мы занимаемся</h2>
           <ul class="working list flex">
             <li class="item">
-              <img src="./images/content1.jpg" alt="работа с ноутбуком" width="370" height="294" />
-              <div class="working-overlay"><p class="overlay-item">Десктопные приложения</p></div>
+              <img
+                src="./images/content1.jpg"
+                alt="работа с ноутбуком"
+                width="370"
+                height="294"
+              />
+              <div class="working-overlay">
+                <p class="overlay-item">Десктопные приложения</p>
+              </div>
             </li>
             <li class="item">
-              <img src="./images/content2.jpg" alt="работа с телефоном" width="370" height="294" />
-              <div class="working-overlay"><p class="overlay-item">Мобильные приложения</p></div>
+              <img
+                src="./images/content2.jpg"
+                alt="работа с телефоном"
+                width="370"
+                height="294"
+              />
+              <div class="working-overlay">
+                <p class="overlay-item">Мобильные приложения</p>
+              </div>
             </li>
             <li class="item">
-              <img src="./images/content3.jpg" alt="работа с планшетом" width="370" height="294" />
-              <div class="working-overlay"><p class="overlay-item">Дизайнерские решения</p></div>
+              <img
+                src="./images/content3.jpg"
+                alt="работа с планшетом"
+                width="370"
+                height="294"
+              />
+              <div class="working-overlay">
+                <p class="overlay-item">Дизайнерские решения</p>
+              </div>
             </li>
           </ul>
         </div>
@@ -204,20 +238,29 @@
                   <li class="item-social">
                     <a href="#" aria-label="facebook" class="team-social-link"
                       ><svg class="team-social-icon" width="20px" height="20px">
-                        <use href="./images/icons.svg#icon-facebook-1"></use></svg
+                        <use
+                          href="./images/icons.svg#icon-facebook-1"
+                        ></use></svg
                     ></a>
                   </li>
                   <li class="item-social">
                     <a href="#" aria-label="linkedin-1" class="team-social-link"
                       ><svg class="team-social-icon" width="20px" height="20px">
-                        <use href="./images/icons.svg#icon-linkedin-1"></use></svg
+                        <use
+                          href="./images/icons.svg#icon-linkedin-1"
+                        ></use></svg
                     ></a>
                   </li>
                 </ul>
               </div>
             </li>
             <li class="item">
-              <img src="./images/marketing.jpg" alt="Николай Тарасов" width="270" height="260" />
+              <img
+                src="./images/marketing.jpg"
+                alt="Николай Тарасов"
+                width="270"
+                height="260"
+              />
               <div class="card-text">
                 <h3 class="team-heading">Николай Тарасов</h3>
                 <p class="team-text">Marketing</p>
@@ -225,32 +268,45 @@
                   <li class="item-social">
                     <a href="#" aria-label="Instagram" class="team-social-link"
                       ><svg class="team-social-icon" width="20px" height="20px">
-                        <use href="./images/icons.svg#icon-instagram"></use></svg
+                        <use
+                          href="./images/icons.svg#icon-instagram"
+                        ></use></svg
                     ></a>
                   </li>
                   <li class="item-social">
                     <a href="#" aria-label="twitter" class="team-social-link"
                       ><svg class="team-social-icon" width="20px" height="20px">
-                        <use href="./images/icons.svg#icon-twitter-1"></use></svg
+                        <use
+                          href="./images/icons.svg#icon-twitter-1"
+                        ></use></svg
                     ></a>
                   </li>
                   <li class="item-social">
                     <a href="#" aria-label="facebook" class="team-social-link"
                       ><svg class="team-social-icon" width="20px" height="20px">
-                        <use href="./images/icons.svg#icon-facebook-1"></use></svg
+                        <use
+                          href="./images/icons.svg#icon-facebook-1"
+                        ></use></svg
                     ></a>
                   </li>
                   <li class="item-social">
                     <a href="#" aria-label="linkedin-1" class="team-social-link"
                       ><svg class="team-social-icon" width="20px" height="20px">
-                        <use href="./images/icons.svg#icon-linkedin-1"></use></svg
+                        <use
+                          href="./images/icons.svg#icon-linkedin-1"
+                        ></use></svg
                     ></a>
                   </li>
                 </ul>
               </div>
             </li>
             <li class="item">
-              <img src="./images/ui_designer.jpg" alt="Михаил Ермаков" width="270" height="260" />
+              <img
+                src="./images/ui_designer.jpg"
+                alt="Михаил Ермаков"
+                width="270"
+                height="260"
+              />
               <div class="card-text">
                 <h3 class="team-heading">Михаил Ермаков</h3>
                 <p class="team-text">UI designer</p>
@@ -258,25 +314,33 @@
                   <li class="item-social">
                     <a href="#" aria-label="Instagram" class="team-social-link"
                       ><svg class="team-social-icon" width="20px" height="20px">
-                        <use href="./images/icons.svg#icon-instagram"></use></svg
+                        <use
+                          href="./images/icons.svg#icon-instagram"
+                        ></use></svg
                     ></a>
                   </li>
                   <li class="item-social">
                     <a href="#" aria-label="twitter" class="team-social-link"
                       ><svg class="team-social-icon" width="20px" height="20px">
-                        <use href="./images/icons.svg#icon-twitter-1"></use></svg
+                        <use
+                          href="./images/icons.svg#icon-twitter-1"
+                        ></use></svg
                     ></a>
                   </li>
                   <li class="item-social">
                     <a href="#" aria-label="facebook" class="team-social-link"
                       ><svg class="team-social-icon" width="20px" height="20px">
-                        <use href="./images/icons.svg#icon-facebook-1"></use></svg
+                        <use
+                          href="./images/icons.svg#icon-facebook-1"
+                        ></use></svg
                     ></a>
                   </li>
                   <li class="item-social">
                     <a href="#" aria-label="linkedin-1" class="team-social-link"
                       ><svg class="team-social-icon" width="20px" height="20px">
-                        <use href="./images/icons.svg#icon-linkedin-1"></use></svg
+                        <use
+                          href="./images/icons.svg#icon-linkedin-1"
+                        ></use></svg
                     ></a>
                   </li>
                 </ul>
@@ -344,7 +408,12 @@
               <label for="modal-name">
                 <span class="modal-label">Имя</span>
               </label>
-              <input class="modal-input" type="text" name="name" id="modal-name" />
+              <input
+                class="modal-input"
+                type="text"
+                name="name"
+                id="modal-name"
+              />
               <svg class="form-svg" width="18px" height="18px">
                 <use href="./images/icons.svg#icon-person-black"></use>
               </svg>
@@ -353,7 +422,12 @@
               <label for="modal-phone">
                 <span class="modal-label">Телефон</span>
               </label>
-              <input class="modal-input" type="tel" name="phone" id="modal-phone" />
+              <input
+                class="modal-input"
+                type="tel"
+                name="phone"
+                id="modal-phone"
+              />
               <svg class="form-svg" width="18px" height="18px">
                 <use href="./images/icons.svg#icon-phone-black"></use>
               </svg>
@@ -362,17 +436,34 @@
               <label for="modal-mail">
                 <span class="modal-label">Почта</span>
               </label>
-              <input class="modal-input" type="email" name="mail" id="modal-mail" />
+              <input
+                class="modal-input"
+                type="email"
+                name="mail"
+                id="modal-mail"
+              />
               <svg class="form-svg" width="18px" height="18px">
                 <use href="./images/icons.svg#icon-email-black"></use>
               </svg>
             </div>
             <div class="label-container">
-              <label for="comment-modal"><span class="modal-label">Комментарий</span></label>
-              <textarea class="area-comments" name="comment" rows="3" id="comment-modal"></textarea>
+              <label for="comment-modal"
+                ><span class="modal-label">Комментарий</span></label
+              >
+              <textarea
+                class="area-comments"
+                name="comment"
+                rows="3"
+                id="comment-modal"
+              ></textarea>
             </div>
             <div class="license-container flex">
-              <input type="checkbox" name="modal-license" id="modal-license" class="modal-check" />
+              <input
+                type="checkbox"
+                name="modal-license"
+                id="modal-license"
+                class="modal-check"
+              />
               <svg class="checkbox-svg" width="16px" height="15px">
                 <use href="./images/icons.svg#icon-modal-checkbox"></use>
               </svg>
@@ -395,16 +486,21 @@
       <div class="container flex footer-line">
         <div>
           <a class="nav-logo footer-margin" href="./"
-            ><span class="logo-color">Web</span><span class="footer-logo">Studio</span></a
+            ><span class="logo-color">Web</span
+            ><span class="footer-logo">Studio</span></a
           >
           <address>
             <span class="footer-text">г. Киев, пр-т Леси Украинки, 26</span>
             <ul class="footer-contacts list">
               <li class="item">
-                <a class="nav-link footer-links" href="mailto:info@example.com">info@example.com</a>
+                <a class="nav-link footer-links" href="mailto:info@example.com"
+                  >info@example.com</a
+                >
               </li>
               <li class="item">
-                <a class="nav-link footer-links" href="tel:+380961111111">+38 096 111 11 11</a>
+                <a class="nav-link footer-links" href="tel:+380961111111"
+                  >+38 096 111 11 11</a
+                >
               </li>
             </ul>
           </address>
@@ -442,7 +538,12 @@
           <p class="join-us">Подпишитесь на рассылку</p>
           <div class="sign-center">
             <form name="sign" class="form flex">
-              <input class="sign-email" type="email" placeholder="E-mail" name="email" />
+              <input
+                class="sign-email"
+                type="email"
+                placeholder="E-mail"
+                name="email"
+              />
               <button type="submit" class="hero-btn sign-btn">
                 <span class="sign-btn-text">Подписаться</span
                 ><svg class="sign-svg" width="24px" height="24px">
