--- a/portfolio.html
+++ b/portfolio.html
@@ -12,6 +12,7 @@
     />
     <link rel="stylesheet" href="./css/modern-normalize.css" />
     <link rel="stylesheet" href="./css/styles.css" />
+    <!-- <link rel="stylesheet" href="./css/main.min.css" /> -->
     <title>WebStudio</title>
   </head>
   <body>
@@ -20,10 +21,16 @@
       <!-- navigation -->
       <div class="container flex">
         <nav class="nav-section flex">
-          <a class="nav-logo" href="./"><span class="logo-color">Web</span>Studio</a>
+          <a class="nav-logo" href="./"
+            ><span class="logo-color">Web</span>Studio</a
+          >
           <ul class="main-nav list flex">
-            <li class="item"><a class="nav-link" href="./index.html">Студия</a></li>
-            <li class="item"><a class="nav-link current" href="#">Портфолио</a></li>
+            <li class="item">
+              <a class="nav-link" href="./index.html">Студия</a>
+            </li>
+            <li class="item">
+              <a class="nav-link current" href="#">Портфолио</a>
+            </li>
             <li class="item"><a class="nav-link" href="#">Контакты</a></li>
           </ul>
         </nav>
@@ -51,11 +58,21 @@
         <div class="container">
           <h1 class="visually-hidden">Примеры наших работ</h1>
           <ul class="filter-btns list flex">
-            <li class="item"><button class="btn blue-btn" type="button">Все</button></li>
-            <li class="item"><button class="btn" type="button">Веб-сайты</button></li>
-            <li class="item"><button class="btn" type="button">Приложения</button></li>
-            <li class="item"><button class="btn" type="button">Дизайн</button></li>
-            <li class="item"><button class="btn" type="button">Маркетинг</button></li>
+            <li class="item">
+              <button class="btn blue-btn" type="button">Все</button>
+            </li>
+            <li class="item">
+              <button class="btn" type="button">Веб-сайты</button>
+            </li>
+            <li class="item">
+              <button class="btn" type="button">Приложения</button>
+            </li>
+            <li class="item">
+              <button class="btn" type="button">Дизайн</button>
+            </li>
+            <li class="item">
+              <button class="btn" type="button">Маркетинг</button>
+            </li>
           </ul>
 
           <ul class="works list flex">
@@ -71,8 +88,9 @@
                   />
                   <div class="works-overlay">
                     <p>
-                      Технокряк это современная площадка распространения коронавируса. Компании
-                      используют эту платформу для цифрового шпионажа и атак на защищённые сервера
+                      Технокряк это современная площадка распространения
+                      коронавируса. Компании используют эту платформу для
+                      цифрового шпионажа и атак на защищённые сервера
                       конкурентов.
                     </p>
                   </div>
@@ -95,14 +113,17 @@
                   />
                   <div class="works-overlay">
                     <p>
-                      Технокряк это современная площадка распространения коронавируса. Компании
-                      используют эту платформу для цифрового шпионажа и атак на защищённые сервера
+                      Технокряк это современная площадка распространения
+                      коронавируса. Компании используют эту платформу для
+                      цифрового шпионажа и атак на защищённые сервера
                       конкурентов.
                     </p>
                   </div>
                 </div>
                 <div class="works-card">
-                  <h2 class="works-heading">Постер New Orlean vs Golden Star</h2>
+                  <h2 class="works-heading">
+                    Постер New Orlean vs Golden Star
+                  </h2>
                   <p class="works-filter">Дизайн</p>
                 </div>
               </a>
@@ -119,8 +140,9 @@
                   />
                   <div class="works-overlay">
                     <p>
-                      Технокряк это современная площадка распространения коронавируса. Компании
-                      используют эту платформу для цифрового шпионажа и атак на защищённые сервера
+                      Технокряк это современная площадка распространения
+                      коронавируса. Компании используют эту платформу для
+                      цифрового шпионажа и атак на защищённые сервера
                       конкурентов.
                     </p>
                   </div>
@@ -143,8 +165,9 @@
                   />
                   <div class="works-overlay">
                     <p>
-                      Технокряк это современная площадка распространения коронавируса. Компании
-                      используют эту платформу для цифрового шпионажа и атак на защищённые сервера
+                      Технокряк это современная площадка распространения
+                      коронавируса. Компании используют эту платформу для
+                      цифрового шпионажа и атак на защищённые сервера
                       конкурентов.
                     </p>
                   </div>
@@ -167,8 +190,9 @@
                   />
                   <div class="works-overlay">
                     <p>
-                      Технокряк это современная площадка распространения коронавируса. Компании
-                      используют эту платформу для цифрового шпионажа и атак на защищённые сервера
+                      Технокряк это современная площадка распространения
+                      коронавируса. Компании используют эту платформу для
+                      цифрового шпионажа и атак на защищённые сервера
                       конкурентов.
                     </p>
                   </div>
@@ -191,8 +215,9 @@
                   />
                   <div class="works-overlay">
                     <p>
-                      Технокряк это современная площадка распространения коронавируса. Компании
-                      используют эту платформу для цифрового шпионажа и атак на защищённые сервера
+                      Технокряк это современная площадка распространения
+                      коронавируса. Компании используют эту платформу для
+                      цифрового шпионажа и атак на защищённые сервера
                       конкурентов.
                     </p>
                   </div>
@@ -215,8 +240,9 @@
                   />
                   <div class="works-overlay">
                     <p>
-                      Технокряк это современная площадка распространения коронавируса. Компании
-                      используют эту платформу для цифрового шпионажа и атак на защищённые сервера
+                      Технокряк это современная площадка распространения
+                      коронавируса. Компании используют эту платформу для
+                      цифрового шпионажа и атак на защищённые сервера
                       конкурентов.
                     </p>
                   </div>
@@ -239,8 +265,9 @@
                   />
                   <div class="works-overlay">
                     <p>
-                      Технокряк это современная площадка распространения коронавируса. Компании
-                      используют эту платформу для цифрового шпионажа и атак на защищённые сервера
+                      Технокряк это современная площадка распространения
+                      коронавируса. Компании используют эту платформу для
+                      цифрового шпионажа и атак на защищённые сервера
                       конкурентов.
                     </p>
                   </div>
@@ -263,8 +290,9 @@
                   />
                   <div class="works-overlay">
                     <p>
-                      Технокряк это современная площадка распространения коронавируса. Компании
-                      используют эту платформу для цифрового шпионажа и атак на защищённые сервера
+                      Технокряк это современная площадка распространения
+                      коронавируса. Компании используют эту платформу для
+                      цифрового шпионажа и атак на защищённые сервера
                       конкурентов.
                     </p>
                   </div>
@@ -284,16 +312,21 @@
       <div class="container flex footer-line">
         <div>
           <a class="nav-logo footer-margin" href="./"
-            ><span class="logo-color">Web</span><span class="footer-logo">Studio</span></a
+            ><span class="logo-color">Web</span
+            ><span class="footer-logo">Studio</span></a
           >
           <address>
             <span class="footer-text">г. Киев, пр-т Леси Украинки, 26</span>
             <ul class="footer-contacts list">
               <li class="item">
-                <a class="nav-link footer-links" href="mailto:info@example.com">info@example.com</a>
+                <a class="nav-link footer-links" href="mailto:info@example.com"
+                  >info@example.com</a
+                >
               </li>
               <li class="item">
-                <a class="nav-link footer-links" href="tel:+380961111111">+38 096 111 11 11</a>
+                <a class="nav-link footer-links" href="tel:+380961111111"
+                  >+38 096 111 11 11</a
+                >
               </li>
             </ul>
           </address>
@@ -331,7 +364,12 @@
           <p class="join-us">Подпишитесь на рассылку</p>
           <div class="sign-center">
             <form name="sign" class="form flex">
-              <input class="sign-email" type="email" placeholder="E-mail" name="email" />
+              <input
+                class="sign-email"
+                type="email"
+                placeholder="E-mail"
+                name="email"
+              />
               <button type="submit" class="hero-btn sign-btn">
                 <span class="sign-btn-text">Подписаться</span
                 ><svg class="sign-svg" width="24px" height="24px">
