новая структура цсс

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <ul class="contacts-nav list flex">
           <li class="item">
             <a class="nav-link contacts" href="mailto:info@devstudio.com"
-              ><svg class="nav-link-icon" width="16px" height="12px">
+              ><svg class="contacts-link-icon" width="16px" height="12px">
                 <use href="./images/icons.svg#icon-envelope"></use>
               </svg>
               info@devstudio.com</a
@@ -46,7 +46,7 @@
           </li>
           <li class="item">
             <a class="nav-link contacts" href="tel:+380961111111"
-              ><svg class="nav-link-icon" width="10px" height="16px">
+              ><svg class="contacts-link-icon" width="10px" height="16px">
                 <use href="./images/icons.svg#icon-smartphone"></use>
               </svg>
               +38 096 111 11 11</a
@@ -61,13 +61,13 @@
       <section class="hero-section section">
         <div class="container">
           <h1 class="hero-heading">Эффективные решения для вашего бизнеса</h1>
-          <button class="hero-btn" type="button" data-modal-open>
+          <button class="main-btn" type="button" data-modal-open>
             Заказать услугу
           </button>
         </div>
       </section>
       <!-- our advantages -->
-      <section class="section fix">
+      <section class="section fix-padding-bottom">
         <div class="container">
           <h2 class="visually-hidden">Наши преимущества</h2>
           <ul class="advantages list flex">
@@ -475,7 +475,7 @@
               </label>
             </div>
           </form>
-          <button type="submit" class="hero-btn modal-send">
+          <button type="submit" class="main-btn modal-send">
             <span class="">Отправить</span>
           </button>
         </div>
@@ -483,7 +483,7 @@
     </main>
     <!-- footer -->
     <footer class="footer-nav">
-      <div class="container flex footer-line">
+      <div class="container flex footer-baseline">
         <div>
           <a class="nav-logo footer-margin" href="./"
             ><span class="logo-color">Web</span
@@ -544,7 +544,7 @@
                 placeholder="E-mail"
                 name="email"
               />
-              <button type="submit" class="hero-btn sign-btn">
+              <button type="submit" class="main-btn sign-btn">
                 <span class="sign-btn-text">Подписаться</span
                 ><svg class="sign-svg" width="24px" height="24px">
                   <use href="./images/icons.svg#icon-send"></use>
