--- a/portfolio.html
+++ b/portfolio.html
@@ -11,8 +11,8 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./css/modern-normalize.css" />
-    <link rel="stylesheet" href="./css/styles.css" />
-    <!-- <link rel="stylesheet" href="./css/main.min.css" /> -->
+    <!-- <link rel="stylesheet" href="./css/styles.css" /> -->
+    <link rel="stylesheet" href="./css/main.min.css" />
     <title>WebStudio</title>
   </head>
   <body>
@@ -37,14 +37,14 @@
         <ul class="contacts-nav list flex">
           <li class="item">
             <a class="nav-link contacts" href="mailto:info@devstudio.com"
-              ><svg class="nav-link-icon" width="16px" height="12px">
+              ><svg class="contacts-link-icon" width="16px" height="12px">
                 <use href="./images/icons.svg#icon-envelope"></use></svg
               >info@devstudio.com</a
             >
           </li>
           <li class="item">
             <a class="nav-link contacts" href="tel:+380961111111"
-              ><svg class="nav-link-icon" width="10px" height="16px">
+              ><svg class="contacts-link-icon" width="10px" height="16px">
                 <use href="./images/icons.svg#icon-smartphone"></use></svg
               >+38 096 111 11 11</a
             >
@@ -54,7 +54,7 @@
     </header>
     <main>
       <!-- portfolio section -->
-      <section class="portfolio-section section">
+      <section class="section">
         <div class="container">
           <h1 class="visually-hidden">Примеры наших работ</h1>
           <ul class="filter-btns list flex">
@@ -309,7 +309,7 @@
     </main>
     <!-- footer -->
     <footer class="footer-nav">
-      <div class="container flex footer-line">
+      <div class="container flex footer-baseline">
         <div>
           <a class="nav-logo footer-margin" href="./"
             ><span class="logo-color">Web</span
@@ -370,7 +370,7 @@
                 placeholder="E-mail"
                 name="email"
               />
-              <button type="submit" class="hero-btn sign-btn">
+              <<button type="submit" class="main-btn sign-btn">
                 <span class="sign-btn-text">Подписаться</span
                 ><svg class="sign-svg" width="24px" height="24px">
                   <use href="./images/icons.svg#icon-send"></use>
