--- a/index.html
+++ b/index.html
@@ -21,32 +21,42 @@
     <header class="header">
       <!-- navigation -->
       <div class="container flex">
-        <nav class="nav-section flex">
-          <a class="nav-logo" href="./"
-            ><span class="logo-color">Web</span>Studio</a
+        <nav class="navigation flex">
+          <a class="logo" href="./"
+            ><span class="logo__color">Web</span>Studio</a
           >
-          <ul class="main-nav list flex">
-            <li class="item">
+          <ul class="main-navigation list flex">
+            <li class="main-navigation__item">
               <a class="nav-link current" href="#">Студия</a>
             </li>
-            <li class="item">
+            <li class="main-navigation__item">
               <a class="nav-link" href="./portfolio.html">Портфолио</a>
             </li>
-            <li class="item"><a class="nav-link" href="#">Контакты</a></li>
+            <li class="main-navigation__item">
+              <a class="nav-link" href="#">Контакты</a>
+            </li>
           </ul>
         </nav>
-        <ul class="contacts-nav list flex">
-          <li class="item">
+        <ul class="contacts-navigation list flex">
+          <li class="contacts-navigation__item">
             <a class="nav-link contacts" href="mailto:info@devstudio.com"
-              ><svg class="contacts-link-icon" width="16px" height="12px">
+              ><svg
+                class="contacts-navigation__icon"
+                width="16px"
+                height="12px"
+              >
                 <use href="./images/icons.svg#icon-envelope"></use>
               </svg>
               info@devstudio.com</a
             >
           </li>
-          <li class="item">
+          <li class="contacts-navigation__item">
             <a class="nav-link contacts" href="tel:+380961111111"
-              ><svg class="contacts-link-icon" width="10px" height="16px">
+              ><svg
+                class="contacts-navigation__icon"
+                width="10px"
+                height="16px"
+              >
                 <use href="./images/icons.svg#icon-smartphone"></use>
               </svg>
               +38 096 111 11 11</a
@@ -485,8 +495,8 @@
     <footer class="footer-nav">
       <div class="container flex footer-baseline">
         <div>
-          <a class="nav-logo footer-margin" href="./"
-            ><span class="logo-color">Web</span
+          <a class="logo footer-margin" href="./"
+            ><span class="logo__color">Web</span
             ><span class="footer-logo">Studio</span></a
           >
           <address>
