--- a/index.html
+++ b/index.html
@@ -39,7 +39,9 @@
         </nav>
         <ul class="contacts-navigation">
           <li class="contacts-navigation__item">
-            <a class="nav-link contacts" href="mailto:info@devstudio.com"
+            <a
+              class="nav-link contacts-navigation__link"
+              href="mailto:info@devstudio.com"
               ><svg
                 class="contacts-navigation__icon"
                 width="16px"
@@ -51,7 +53,9 @@
             >
           </li>
           <li class="contacts-navigation__item">
-            <a class="nav-link contacts" href="tel:+380961111111"
+            <a
+              class="nav-link contacts-navigation__link"
+              href="tel:+380961111111"
               ><svg
                 class="contacts-navigation__icon"
                 width="10px"
